[project]
name = "agentyard"
version = "0.3.0"
description = "AgentYard SDK — register, discover, and manage A2A agents"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "redis[hiredis]>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "watchfiles>=0.24",
]

[project.scripts]
agentyard = "agentyard.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentyard*"]
